# anytrain

./: .gitignore  AGENTS.md  README.md  pyproject.toml  todo.md
docs/: architecture.md  bicodec.md  codec-envs.md  codec.md  components.md  dac.md  deepaudio-example-migration.md  flow-matching-design.md  gan-framework-design.md  lightning.md  longcat.md  quantization-migration.md  stable-codec.md  tts.md  unicodec.md
docs/modules/: chat.md  evaluator.md  framework.md  hydra.md  idspace.md  index.md  lightning.md  loss.md  module.md  optim.md  package-root.md  perf.md  plotter.md  registry.md  tokenizer.md  types.md  utils.md
examples/: tiny_regression.py
examples/configs/: tiny_regression.yaml
src/anytrain/: __init__.py  _buffer.py  _compat.py  env.py  registry.py  stats.py  types.py
src/anytrain/chat/: __init__.py  _provider.py  chat.py  config.py  types.py
src/anytrain/codec/: __init__.py  _audio.py  _module.py  protocol.py
src/anytrain/codec/bicodec/: __init__.py  _cache.py  assets.py  codec.py
src/anytrain/codec/dac/: __init__.py  _cache.py  assets.py  cache.py  codec.py
src/anytrain/codec/longcat/: __init__.py  _cache.py  assets.py  cache.py  codec.py
src/anytrain/codec/stable_codec/: __init__.py  codec.py
src/anytrain/codec/unicodec/: __init__.py  _cache.py  assets.py  cache.py  codec.py
src/anytrain/evaluator/: __init__.py  _validation.py  abc.py  group.py  todo.md
src/anytrain/evaluator/speech/: __init__.py  _torch.py  asr.py  audio.py  evaluator.py  utmos.py
src/anytrain/evaluator/text/: __init__.py  _chinese.py  _fallback.py  evaluator.py  normalization.py  scores.py
src/anytrain/example/: README.md  __init__.py  audio.py  resources.py
src/anytrain/framework/: __init__.py  todo.md
src/anytrain/framework/flow_matching/: README.md  __init__.py  _deps.py  _runtime.py  continuous.py  discrete.py  objective.py  sampler.py  source.py  time.py  types.py
src/anytrain/framework/gan/: __init__.py  _output.py  criterion.py  feature.py  module.py  penalty.py  types.py
src/anytrain/hydra/: __init__.py  app.py  config.py  environment.py  instantiate.py  modules.py  paths.py  trainer.py
src/anytrain/idspace/: __init__.py  _embedding_init.py  _head.py  _ids.py  embedding.py  hf.py  layout.py  protocol.py  space.py  tokenizer.py
src/anytrain/lightning/: __init__.py
src/anytrain/loss/: __init__.py  abc.py  balancer.py  group.py  todo.md
src/anytrain/module/: __init__.py  dirichlet_tempering.py  dit.py  qwen3.py  todo.md
src/anytrain/optim/: __init__.py  _llm_config.py  _params.py  adamw.py  compose.py  config.py  llm.py  muon.py  options.py  rules.py  scheduler.py
src/anytrain/perf/: __init__.py  hardware.py  metrics.py  profile.py
src/anytrain/plotter/: __init__.py  image.py  protocol.py
src/anytrain/tokenizer/: __init__.py  codec_bpe.py  int_bpe.py  todo.md
src/anytrain/tts/: __init__.py  protocol.py
src/anytrain/utils/: __init__.py  todo.md
tests/: test_bicodec_assets.py  test_bicodec_codec.py  test_buffer.py  test_chat.py  test_dac_assets.py  test_dac_cache.py  test_dac_codec.py  test_env.py  test_evaluator.py  test_evaluator_speech.py  test_evaluator_text.py  test_example_assets.py  test_example_tiny_regression.py  test_framework_flow_matching.py  test_framework_gan.py  test_idspace_embedding.py  test_idspace_hf.py  test_idspace_layout.py  test_idspace_space.py  test_idspace_token_embedding.py  test_lightning.py  test_longcat_assets.py  test_longcat_cache.py  test_longcat_codec.py  test_loss.py  test_main.py  test_module_dirichlet_tempering.py  test_module_dit.py  test_module_dynamic_conv.py  test_module_quantization_agrvq.py  test_module_quantization_fsq.py  test_module_quantization_gvq.py  test_module_quantization_rvq.py  test_module_quantization_vq.py  test_module_qwen3.py  test_module_qwen_mtp.py  test_optim.py  test_perf.py  test_plotter.py  test_qwen_tts.py  (+10 more)
(+65 files in other folders)
