[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anytrain"
version = "0.1.0"
description = "Components for building PyTorch and Lightning training code."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.12",
    "lightning>=2.0",
    "einops>=0.7",
    "tqdm>=4.0",
]

[project.optional-dependencies]
data = []
logger = ["wandb>=0.16"]
module = ["transformers"]
plot = ["matplotlib>=3.7", "plotly>=5.0", "seaborn>=0.13"]
text = []
speech = []
evaluator = []
longcat = [
    "huggingface-hub>=0.23",
    "longcat-audio-codec @ git+https://github.com/rookiejune/LongCat-Audio-Codec.git",
]
test = ["pytest>=8.0", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
