[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anytrain"
version = "0.1.0"
description = "Components for building PyTorch and Lightning training code."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.12",
    "lightning>=2.0",
    "einops>=0.7",
    "tqdm>=4.0",
]

[project.optional-dependencies]
audio = ["torchcodec>=0.2", "torchaudio>=2.0"]
data = []
logger = ["wandb>=0.16"]
module = ["transformers"]
plot = ["matplotlib>=3.7", "plotly>=5.0", "seaborn>=0.13"]
text = ["jiwer>=4.0", "sacrebleu>=2.0"]
speech = [
    "jiwer>=4.0",
    "openai-whisper",
    "sacrebleu>=2.0",
    "soundfile>=0.12",
    "torchaudio>=2.0",
]
evaluator = []
flow = ["flow_matching"]
longcat = [
    "huggingface-hub>=0.23",
    "longcat-audio-codec @ git+https://github.com/rookiejune/LongCat-Audio-Codec.git",
]
moss-tts = ["torchaudio>=2.0", "transformers"]
test = ["pytest>=8.0", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"anytrain.example" = [
    "README.md",
    "assets/speech/*.flac",
    "assets/music/*.mp3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
